Modificacion de gitIgnore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# archivos privados
+*.[oa] y *~
+App.css
+App.js
+App.test.js
+reportWebVitals.js
+setupTest.js
+
 # dependencies
 /node_modules
 /.pnp
